--- a/src/Core/HR.LeaveManagement.Application/HR.LeaveManagement.Application.csproj
+++ b/src/Core/HR.LeaveManagement.Application/HR.LeaveManagement.Application.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="../HR.LeaveManagement.Domain/HR.LeaveManagement.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+  </ItemGroup>
+
 </Project>
