🎉 Implement API Authentication

--- a/src/API/HR.LeaveManagement.API/appsettings.json
+++ b/src/API/HR.LeaveManagement.API/appsettings.json
@@ -1,12 +1,26 @@
 {
+  
+  "ConnectionStrings": {
+    "LeaveManagementConnectionString": "Data Source=HR.LeaveManagement.db",
+    "LeaveManagementIdentityConnectionString": "Data Source=HR.LeaveManagement_Identity.db"
+  },
+  "EmailSettings": {
+    "ApiKey": "SENDGRID_KEY_HERE",
+    "FromName": "Leave Management System",
+    "FromAddress": "noreply@leavemanagement.com"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "LeaveManagementConnectionString": "Data Source=HR.LeaveManagement.db"
+  "JwtSettings": {
+    "Key": "84322CFB66934ECC86D547C5CF4F2EFC",
+    "Issuer": "HRLeavemanagement",
+    "Audience": "HRLeavemanagementUser",
+    "DurationInMinutes": 60
   }
 }
